# grapheme

./: CHANGELOG.md  LICENSE  README.rst  pyproject.toml
.github/workflows/: python-app.yml
docs/: conf.py  grapheme.rst  index.rst
grapheme/: __init__.py  api.py  finder.py  grapheme_property_group.py  incb_property_group.py
grapheme/data/: derived_core_property.json  grapheme_break_property.json
tests/: benchmark.py  debug.py  test_custom.py  test_mod.py  test_standard.py
unicode-data/: read_property_file.py
