[project]
name = "graphemeu"
version = "0.7.1"
description = "Unicode grapheme helpers"
readme = "README.rst"
requires-python = ">=3.7"
authors = [{ name = "Alvin Lindstam", email = "alvin.lindstam@gmail.com" }]
maintainers = [{ name = "Timendum" }]
license = { file = "LICENSE" }
keywords = ["unicode", "grapheme"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
]


[project.urls]
Homepage = "https://github.com/timendum/grapheme"
Documentation = "https://graphemeu.readthedocs.io/"

[project.optional-dependencies]
dev = ["pytest"]
docs = ["sphinx", "sphinx-autobuild"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grapheme"]

[tool.ruff]
lint.select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "ISC",
    "G",
    "PIE",
    "PYI",
    "TCH",
    "PLE",
    "PLW",
]
lint.ignore = ["ISC001"]
line-length = 100
